# QEC-Lib

./: .gitignore  AUDIT_trapped_ion_modules.md  CONTRIBUTING.md  CSS_SURGERY_ANIMATION_FIX_PLAN.md  CSS_SURGERY_BRIDGE_SPLIT_FIX_PLAN.md  CSS_SURGERY_COMPREHENSIVE_FIX_PLAN.md  CSS_SURGERY_FIX_PLAN.md  ETHICAL_NOTICE.md  FIX_PLAN.md  FIX_PLAN_SCHEDULING_ORDER.md  GADGET_GENERALISATION_PLAN.md  GADGET_METADATA_FIX_PLAN.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  README.md  _DEEP_RESEARCH_FINDINGS.md  _DRAIN_ANALYSIS.md  _ESSENTIAL_STATE.md  _EXACT_CODE_CHANGES.md  _EXEC_PLAN.md  _FINAL_IMPL_DETAILS.md  _FINAL_PROGRESS.md  _FINAL_REMAINING.md  _FINAL_STATUS.md  _FIX_A_CRITICAL_REF.md  _FIX_CONTEXT.md  _FIX_IMPLEMENTATION_STATE.md  _FIX_STATUS.md  _GIT_DIFF_ANALYSIS.md  _GROUND_TRUTH_FIX_PLAN.md  _IMPLEMENTATION_NOTES.md  _IMPLEMENTATION_PROGRESS.md  _IMPLEMENTATION_STATE.md  _IMPLEMENTATION_STATE.py  _IMPL_CONTEXT.md  _IMPL_GUIDE.md  _IMPL_NOTES.md  _IMPL_NOTES_MS_FIX.md  _IMPL_STATE.md  _IMPL_STATE_v2.md  (+130 more)
examples/: SCHEDULING_FIX_PLAN.md  SCHEDULING_FIX_PLAN_V2.md  shor_x_steane_template.py  trapped_ion_adapter_example.py
notebooks/: _comprehensive_proof.py  _diag_meas_reset_highlight.py  _run_sweep.py  _sweep_log.txt  _sweep_results.json  _verify_both_fixes.py  end_to_end_scaling.ipynb  ion.py  trapped_ion_demo.ipynb  wise_animation.ipynb  wise_animation_v2.ipynb  wise_full_sweep_new.csv  wise_newpipeline_results.csv  wise_newpipeline_results.txt  wise_pipeline_validation.ipynb  wise_scaling_sweep.ipynb  wise_sweep_validation.ipynb
scripts/: diag_rebuild_convergence.py  (+1 more)
(+381 files in other folders)
