[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qectostim"
version = "0.1.0"
description = "QECToStim: an extensible QEC → Stim + decoder library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "stim>=1.12.0",       # whatever version you actually want
  "numpy>=1.26",
  "pymatching>=2.0.0",  # etc.
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]